# swagger.json
@@ -8,8 +8,8 @@
       "email": "YOU@BIZ.com"
     }
   },
-  "host": "http://undefined:undefined",
-  "basePath": "/",
+  "host": "uw9mp3g45m.execute-api.ap-southeast-1.amazonaws.com:443",
+  "basePath": "/latest",
   "schemes": [
     "https"
   ],
@@ -27,7 +27,7 @@
   "paths": {
     "/info": {
       "get": {
-        "operationId": "listInsights",
+        "operationId": "info",
         "description": "Get some info about this Insight",
         "responses": {
           "200": {
